--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 <h1>Hanshi Sun</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/bio.png" alt="no picture" width="185px" height="239px" />&nbsp;</td>
-<td align="left"><p><a href="https://preminstrel.github.io">Hanshi Sun</a>, B.S. <br /> 
+<img src="assets/img/dummy.png" alt="no picture" width="185px" height="239px" />&nbsp;</td>
+<td align="left"><p><a href="https://preminstrel.github.io">Hanshi Sun</a>, B.E. <br /> 
 Junior Engineer at <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
 Nanjing, Jiangsu, China <br />
 <br />
 Email: preminstrel@gmail.com <br />
-[<a href="https://github.com/preminstrel">GitHub</a>][<a href="CV.pdf">Curriculem Vitae</a>] <br /></p>
+[<a href="https://github.com/preminstrel">GitHub</a>][<a href="assets/pdf/CV.pdf">Curriculem Vitae</a>] <br /></p>
 </td></tr></table>
-<p>at Nanjing, Jiangsu, CN. (May 28, 2022)
-</p>
+<p>at Nanjing, Jiangsu, CN. (May 28, 2022)</p>
 <h2>About me</h2>
 <p>Currently I’m a 2019 undergraduate majoring in Electronic Science and Technology at Southeast University, expected to graduate in 2023. My research interest lies on Artificial Intelligence and Computer Vision, etc.</p>
 <h2>Education </h2>
