--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 <div class="menu-item"><a href="index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="experiences.html">Experiences</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
-<div class="menu-item"><a href="awards.html">Awards</a></div>
+<div class="menu-category">Link</div>
+<div class="menu-item"><a href="https://preminstrel.github.io/blog/">Blog</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Hanshi Sun</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="assets/img/dummy.png" alt="no picture" width="185px" height="239px" />&nbsp;</td>
+<img src="assets/img/dummy.png" alt="no picture" width="240px" height="140px" />&nbsp;</td>
 <td align="left"><p><a href="https://preminstrel.github.io">Hanshi Sun</a>, B.E. <br /> 
-Junior Engineer at <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
+UG at <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
 Nanjing, Jiangsu, China <br />
 <br />
 Email: preminstrel@gmail.com <br />
@@ -34,10 +34,10 @@ Email: preminstrel@gmail.com <br />
 </td></tr></table>
 <p>at Nanjing, Jiangsu, CN. (May 28, 2022)</p>
 <h2>About me</h2>
-<p>Currently I’m a 2019 undergraduate majoring in Electronic Science and Technology at Southeast University, expected to graduate in 2023. My research interest lies on Artificial Intelligence and Computer Vision, etc.</p>
+<p>Currently I’m a 2019 undergraduate majoring in Electronic Science and Technology at Southeast University, expected to graduate in 2023. My research focuses on developing multimodal multi-task machine learning as well as deep learning models and algorithms for computer vision using Unified Transformer.</p>
 <h2>Education </h2>
 <ul>
-<li><p>B.S. in Electronic Science and Technology, Southeast University, Sept. 2019 - Jun. 2023</p>
+<li><p>B.E. in Electronic Science and Technology, Southeast University, Sep. 2019 - Jun. 2023</p>
 </li>
 </ul>
 <h2>Research Interests</h2>
@@ -47,6 +47,8 @@ Email: preminstrel@gmail.com <br />
 <li><p>Computer Vision, Natural Language Processing</p>
 </li>
 </ul>
+<h2>Visitors</h2>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=weAawplBogRZm4707J2DPkv1Pn3WYzslKBDineUl-bw'></script>
 </td>
 </tr>
 </table>
