--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Email: preminstrel@gmail.com <br />
 </li>
 </ul>
 <h2>Visitors</h2>
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=weAawplBogRZm4707J2DPkv1Pn3WYzslKBDineUl-bw'></script>
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=XU6JrQnKZEyIB6O3OwVxgskULQ1Qf9Uu5D17OS6SISE"></script>
 </td>
 </tr>
 </table>
