--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@ Email: preminstrel@gmail.com <br />
 </li>
 </ul>
 <h2>Visitors</h2>
-<div align="center" style="width:20%">
+<p>
+<center>
+<div align="center" style="width:18%">
 <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=XU6JrQnKZEyIB6O3OwVxgskULQ1Qf9Uu5D17OS6SISE"></script>
 </div>
+</center>
+</p>
 </td>
 </tr>
 </table>
