--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1>Hanshi Sun</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="assets/img/dummy.png" alt="no picture" width="240px" height="140px" />&nbsp;</td>
+<img src="assets/img/bio.jpg" alt="no picture" width="120px" height="160px" />&nbsp;</td>
 <td align="left"><p><a href="https://preminstrel.github.io">Hanshi Sun</a>, B.E. <br /> 
 UG at <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
 Nanjing, Jiangsu, China <br />
