--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 UG at <a href="https://www.seu.edu.cn/">Southeast University</a> <br />
 Nanjing, Jiangsu, China <br />
 <br />
-Email: preminstrel <a href="at">at</a> gmail <a href="dot">dot</a> com <br />
+Email: preminstrel [at] gmail [dot] com <br />
 [<a href="https://github.com/preminstrel">GitHub</a>][<a href="assets/pdf/CV.pdf">Curriculem Vitae</a>] <br /></p>
 </td></tr></table>
 <p>at JiangsuTucai (江苏图采), Jiangsu, CN. (May 1, 2022)</p>
