--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Nanjing, Jiangsu, China <br />
 Email: preminstrel [at] gmail [dot] com <br />
 [<a href="https://github.com/preminstrel">GitHub</a>][<a href="assets/pdf/CV.pdf">Curriculem Vitae</a>] <br /></p>
 </td></tr></table>
-<p>at JiangsuTucai (江苏图采), Jiangsu, CN. (May 1, 2022)</p>
+<p>at Lake Louise, Alberta, Canada. (July, 2022)</p>
 <h2>About me</h2>
 <p>Currently I’m a 2019 undergraduate majoring in Electronic Science and Technology at Southeast University, expected to graduate in 2023. My research focuses on developing multimodal multi-task machine learning as well as deep learning models and algorithms for computer vision using Unified Transformer.</p>
 <h2>Education </h2>
