--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Email: preminstrel [at] gmail [dot] com <br />
 </ul>
 <h2>Research Interests</h2>
 <ul>
-<li><p>Machine Learning, Deep Learning</p>
+<li><p>Machine learning, deep learning</p>
 </li>
-<li><p>Computer Vision, Natural Language Processing</p>
+<li><p>Object detection, anomly detection</p>
 </li>
 </ul>
 <h2>Friends</h2>
