update friend link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ Email: preminstrel [at] gmail [dot] com <br />
 <details>
 <summary>expand</summary>
 <li>SJTU: <a href="http://yanjieze.com">Yanjie Ze</a></li>
+<li>UC: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
 <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
 <li>SEU: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
 <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
