revise for adaption

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+
+
     <title>Hanshi Sun</title>
     <link rel="shortcut icon" href="assets/img/title.ico">
 
@@ -48,7 +51,7 @@
                             Curriculum Vitae
                         </a><br>
                         <a href="https://preminstrel.github.io/blog" target="_blank">
-                            <img src="assets/img/blog.png" width="20px" style="margin-bottom:-3px">
+                            <img src="assets/img/blog.jpeg" width="20px" style="margin-bottom:-3px">
                             Blog
                         </a>
                     </p>
