revise for adaption

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/img/bio.jpg" border="0" width="230"><br>(at Lake Louise, Alberta, Canada)
+                    <img src="assets/img/bio.jpg" border="0" width="88%"><br>(at Lake Louise, Alberta, Canada)
                 </td>
                 <td style="padding:0.5%;width:70%;vertical-align:middle">
                     <div id="toptitle">
