--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
             </tr>
         </tbody>
     </table>
+
+    <h2>News</h2>
+    <ul>
+
+        <div style="height:50px;width:fit-content;overflow:auto;background:#FFFFFF;">
+            <li>
+                <p>[2022/03/04] I will join <a href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank
+                        rel=noopener>Prof.
+                        Xingyu Li&rsquo;s vision group</a> at <a href=https://www.ualberta.ca/index.html target=_blank
+                        rel=noopener>University of Alberta</a> as a research intern during summer 2022.
+            </li>
+
+        </div>
+    </ul>
+    <br>
+
     <h2>Education</h2>
     <table>
         <tbody>
@@ -68,8 +84,8 @@
                         <li>
                             <i>Bachelor of Engineering in Eletronic Science and Technology</i>
                         </li>
-                        <li>Overall GPA: 94.04/100 | 3.98/4.0 | Rank 1/20</li>
-                        <li>China National Scholarship</li>
+                        <li>Overall GPA: 3.98/4.0, 94.04/100 | Ranking: 1/20</li>
+                        <li>2021 & 2022 China National Scholarship</li>
                     </ul>
                 </td>
                 <td>
