--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <h1 style="color: black;">Hanshi Sun &nbsp 孙寒石</h1>
                     </div>
                     <p>I am an undergraduate student in the Electrical and Computer Engineering Department at <a
-                            href="https://www.seu.edu.cn/english/" target="_blank">Southeast University</a>. I am a
+                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I am a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I am now
@@ -39,7 +39,7 @@
                             <img src="assets/img/github.jpeg" width="20px" style="margin-bottom:-3px">
                             GitHub (preminstrel)
                         </a><br>
-                        <a href="https://www.linkedin.com/in/hanshi-sun-5b74b8228/" target="_blank">
+                        <a href="https://www.linkedin.com/in/hanshi-sun-5b74b8228/" target="blank">
                             <img src="assets/img/LinkedIn.png" width="20px" style="margin-bottom:-3px">
                             LinkedIn
                         </a><br>
@@ -47,7 +47,7 @@
                             <img src="assets/img/cv.jpeg" width="20px" style="margin-bottom:-3px">
                             Curriculum Vitae
                         </a><br>
-                        <a href="https://preminstrel.github.io/blog" target="_blank">
+                        <a href="https://preminstrel.github.io/blog" target="blank">
                             <img src="assets/img/blog.jpeg" width="20px" style="margin-bottom:-3px">
                             Blog
                         </a>
@@ -61,15 +61,20 @@
 
     <h2>News</h2>
     <ul>
-
-        <div style="height:50px;width:fit-content;overflow:auto;background:#FFFFFF;">
+        <div style="height:100px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2022/03/04] I will join <a href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank
-                        rel=noopener>Prof.
-                        Xingyu Li&rsquo;s vision group</a> at <a href=https://www.ualberta.ca/index.html target=_blank
-                        rel=noopener>University of Alberta</a> as a research intern during summer 2022.
+                <p>[2022/07/06] I am working as a research intern during summer 2022 in Prof.<a
+                        href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank rel=noopener>
+                        Xingyu Li</a>&rsquo;s group at the <a href=https://www.ualberta.ca/index.html target=_blank
+                        rel=noopener>University of Alberta</a>.
+                </p>
             </li>
-
+            <li>
+                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a
+                        href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
+                    University.
+                </p>
+            </li>
         </div>
     </ul>
     <br>
@@ -84,7 +89,7 @@
                         <li>
                             <i>Bachelor of Engineering in Eletronic Science and Technology</i>
                         </li>
-                        <li>Overall GPA: 3.98/4.0, 94.04/100 | Ranking: 1/20</li>
+                        <li>Overall GPA: <font color="red"> 3.98/4.0, 94.04/100 </font> | Ranking: 1/20</li>
                         <li>2021 & 2022 China National Scholarship</li>
                     </ul>
                 </td>
@@ -212,7 +217,7 @@
                 <i style="color:red">Under review</i>
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="_blank">project
+                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
                         page</a>]
                     <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
                     <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
@@ -236,7 +241,7 @@
                 <em>Future Generation Computer Systems</em>, (<i><b>FGCS</b></i>), 2022.
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="_blank">project
+                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
                         page</a>]
                     <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
                     <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
@@ -262,9 +267,9 @@
                 (<i><b>ICAICE</b></i>), 2021.
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/ECG-Classification/" target="_blank">project page</a>]
-                    [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>]
-                    [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>]
+                    [<a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a>]
+                    [<a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a>]
+                    [<a href="https://github.com/preminstrel/ECG-Classification" target="blank">code</a>]
                 </p>
             </td>
         </tr>
@@ -274,14 +279,18 @@
     </table>
     <h2>Miscellaneous</h2>
     <p>
+
     <details style="line-height: 0.4;">
         <summary>Friends (click to expand)</summary>
-        <li>SJTU: <a href="http://yanjieze.com">Yanjie Ze</a></li>
-        <li>UC: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
-        <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
-        <li>SEU: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
-        <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
-        <li>CUC: <a href="https://primopan.github.io">Primo Pan</a></li>
+        <ul>
+            <li>SJTU: <a href=" http://yanjieze.com">Yanjie Ze</a></li>
+            <li>UC: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
+            <li>SEU: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
+            <li>SWU: <a href="https://ming-cong-tang.com/">Mingcong Tang</a></li>
+            <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
+            <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
+            <li>CUC: <a href="https://primopan.github.io">Primo Pan</a></li>
+        </ul>
     </details>
     </p>
     <div clss="footer">
