--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
     <ul>
         <div style="height:100px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
+                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a
+                        href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
+                    University.
+                </p>
+            </li>
+            <li>
                 <p>[2022/07/06] I am working as a research intern during summer 2022 in Prof.<a
                         href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank rel=noopener>
                         Xingyu Li</a>&rsquo;s group at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a>.
-                </p>
-            </li>
-            <li>
-                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a
-                        href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
-                    University.
                 </p>
             </li>
         </div>
@@ -101,7 +101,7 @@
         </tbody>
     </table>
 
-    <!-- <table>
+    <table>
         <tbody>
             <tr>
                 <td width="800">
@@ -118,9 +118,35 @@
             </tr>
             <tr></tr>
         </tbody>
-    </table> -->
+    </table>
 
     <h2>Research Experience</h2>
+    <table>
+        <tbody>
+            <tr>
+                <td width="800">
+                    <h4> Southeast University, Nanjing, China (Oct. 2022 - Present)</h4>
+                    <ul>
+                        <li>
+                            <i>Bachelor Thesis</i>
+                        </li>
+                        <li>Supervisor: Prof.
+                            <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
+                            </a>
+                        </li>
+                        <li>Project: Incremental Learning</li>
+                    </ul>
+                </td>
+                <td width="141px">
+                    <img id="school_logo" src="assets/img/seu_ee.jpeg" width="120px">
+                </td>
+                <td width="144px">
+                    <img src="assets/img/PALMLogo.png" width="125px">
+                </td>
+            </tr>
+            <tr></tr>
+        </tbody>
+    </table>
     <table>
         <tbody>
             <tr>
@@ -140,11 +166,12 @@
                         </li>
                     </ul>
                 </td>
+                <td><br><br><br><br></td>
                 <td>
                     <img src="assets/img/University_of_Alberta_logo.png" width="285px">
                     <center><img src="assets/img/mitacs.jpeg" width="285px"></center>
+                </td>
             </tr>
-            <tr></tr>
         </tbody>
     </table>
     <table>
@@ -283,6 +310,7 @@
     <details style="line-height: 0.4;">
         <summary>Friends (click to expand)</summary>
         <ul>
+            <li>HKU: <a href=" http://yazhou-z.github.io">Yazhou Zhao</a></li>
             <li>SJTU: <a href=" http://yanjieze.com">Yanjie Ze</a></li>
             <li>UC: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
             <li>SEU: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
