.DS_Store banished

--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
                             href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I am a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
-                            href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I am now
-                        a research intern at UofA, supervised by Prof. <a
-                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>.
+                            href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
+                        a research intern at UofA before, supervised by Prof. <a
+                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am a intern at
+                        Apple Inc. now.
                         <br><br>
                         Research Interest: Computer Vision (object detection, classification and anomaly
                         detection)<br>
-                        Email: preminstrel [at] gmail [dot] com
+                        <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
+                        [at] gmail [dot] com
+                        (Research)<br>
+                        <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> sunhanshi1225 [at]
+                        outlook [dot] com (Academic)<br>
                     </p>
                     <p style="line-height: 1.8;">
                         <a href="https://github.com/preminstrel">
@@ -61,7 +66,11 @@
 
     <h2>News</h2>
     <ul>
-        <div style="height:100px;width:fit-content;overflow:auto;background:#FFFFFF;">
+        <div style="height:98px;width:fit-content;overflow:auto;background:#FFFFFF;">
+            <li>
+                <p>[2022/10/25] I will go to <a href=https://www.apple.com>Apple Inc.</a> as a intern in EE/SW team.
+                </p>
+            </li>
             <li>
                 <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a
                         href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
@@ -84,7 +93,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Sep. 2019 - Jul. 2023)</h4>
+                    <h4> Southeast University, Nanjing, China (Sep 2019 - Jul 2023)</h4>
                     <ul>
                         <li>
                             <i>Bachelor of Engineering in Eletronic Science and Technology</i>
@@ -105,10 +114,10 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> University of Edinburgh, Edinburgh, UK (Jan. 2023 - Jul. 2023)</h4>
+                    <h4> University of Edinburgh, Edinburgh, UK (Jan 2023 - Jul 2023)</h4>
                     <ul>
                         <li>
-                            <i>International Exchange Student, School of Informatics</i>
+                            <i>(Expected) International Exchange Student, School of Informatics</i>
                         </li>
                     </ul>
                 </td>
@@ -125,7 +134,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Oct. 2022 - Present)</h4>
+                    <h4> Southeast University, Nanjing, China (Oct 2022 - Present)</h4>
                     <ul>
                         <li>
                             <i>Bachelor Thesis</i>
@@ -134,7 +143,7 @@
                             <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
                             </a>
                         </li>
-                        <li>Project: Incremental Learning</li>
+                        <li>Project: Multi-task Learning/Continual Learning</li>
                     </ul>
                 </td>
                 <td width="141px">
@@ -151,7 +160,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> University of Alberta, Edmonton, Canada (Jul. 2022 - Oct. 2022)</h4>
+                    <h4> University of Alberta, Edmonton, Canada (Jul 2022 - Present)</h4>
                     <ul>
                         <li>
                             <i>Mitacs Globalink Research Internship</i>
@@ -178,7 +187,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Jan. 2022 - Jul. 2022)</h4>
+                    <h4> Southeast University, Nanjing, China (Oct 2021 - Jul 2022)</h4>
                     <ul>
                         <li>
                             <i>Research Assitant in <a href="http://palm.seu.edu.cn/members.html">PALM Lab</a></i>
@@ -187,7 +196,8 @@
                             <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
                             </a>
                         </li>
-                        <li>Project: Multi-Modal Multi-task Transformer on Fundus Images</li>
+                        <li>Project 1: Disentangled Distribution Learning and Consistency Regularization</li>
+                        <li>Project 2: Multi-Modal Multi-task Transformer on Fundus Images</li>
                     </ul>
                 </td>
                 <td width="141px">
@@ -204,7 +214,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Dec. 2020 - Sep. 2021)</h4>
+                    <h4> Southeast University, Nanjing, China (Dec 2020 - Sep 2021)</h4>
                     <ul>
                         <li>
                             <i>Research Assitant in
@@ -224,6 +234,28 @@
                 </td>
                 <td width="144px">
                     <img src="assets/img/seu.jpg" width="125px">
+                </td>
+            </tr>
+            <tr></tr>
+        </tbody>
+    </table>
+    <h2>Professional Experience</h2>
+    <table>
+        <tbody>
+            <tr>
+                <td width="800">
+                    <h4> Apple Inc., China (Nov 2022 - Present)</h4>
+                    <ul>
+                        <li>
+                            <i>iPad System Intern</i>
+                        </li>
+                        <li> Collaborate with EE team and SW team to debug and fix the issue</li>
+                        <li>Issue reproduce, symptom capture and hands on debug
+                    </ul>
+                    </li>
+                </td>
+                <td width="288px">
+                    <img src="assets/img/apple.png" width="288px">
                 </td>
             </tr>
             <tr></tr>
