--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
                             </a>
                         </li>
-                        <li>Project: Multi-task Learning/Continual Learning</li>
+                        <li>Project: Multi-task Learning Based Fundus Multi-disease Diagnosis</li>
                     </ul>
                 </td>
                 <td width="141px">
