--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Apple Inc., China (Nov 2022 - Present)</h4>
+                    <h4> Apple Inc., Shenzhen, China (Nov 2022 - Present)</h4>
                     <ul>
                         <li>
                             <i>iPad System Intern</i>
