--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </tbody>
     </table>
 
-    <table>
+    <!-- <table>
         <tbody>
             <tr>
                 <td width="800">
@@ -127,7 +127,7 @@
             </tr>
             <tr></tr>
         </tbody>
-    </table>
+    </table> -->
 
     <h2>Research Experience</h2>
     <table>
@@ -249,8 +249,9 @@
                         <li>
                             <i>iPad System Intern</i>
                         </li>
-                        <li> Collaborate with EE team and SW team to debug and fix the issue</li>
-                        <li>Issue reproduce, symptom capture and hands on debug
+                        <li> Built a pure python automation test frame that can run on multiple units, collect and analyze logs</li>
+                        <li>Issue reproduction, symptom capture, and hands-on debugging for coexistence testing</li>
+                        <li>Created web pages with diverse visualization of the analyzed data using Flask</li>
                     </ul>
                     </li>
                 </td>
@@ -261,7 +262,7 @@
             <tr></tr>
         </tbody>
     </table>
-    <h2>Publications</h2>
+    <h2>Selected Publications</h2>
     <table>
         <tr>
             <td width="306">
