--- a/index.html
+++ b/index.html
@@ -266,6 +266,31 @@
     <table>
         <tr>
             <td width="306">
+                <img src="assets/img/coming.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+            </td>
+            <td>
+                <b>Retina OCT Anomaly Detection and localization via Low-level Pyramid Reverse Distillation Network
+                </b> <br>
+                <br>
+                Jinan Bao, <strong>Hanshi Sun</strong> and Xingyu Li <br>
+                <em>Medical Imaging with Deep Learning</em>, (<i><b>MIDL</b></i>), 2023.
+                <i style="color:red">submitted</i>
+                <p></p>
+                <p>
+                    [<a href="https://preminstrel.github.io/" target="blank">project
+                        page</a>]
+                    <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
+                    <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
+                </p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
+    <table>
+        <tr>
+            <td width="306">
                 <img src="assets/img/Ret-T.png" width="285px" style="box-shadow: 4px 4px 8px #888">
             </td>
             <td>
@@ -273,8 +298,8 @@
                 </b> <br>
                 <br>
                 Peng Xie, Yixiao Yuan, <strong>Hanshi Sun</strong> and Yi Zhou <br>
-                <em>British Machine Vision Virtual Conference</em>, (<i><b>BMVC</b></i>), 2022.
-                <i style="color:red">Under review</i>
+                <!-- <em>British Machine Vision Virtual Conference</em>, (<i><b>BMVC</b></i>), 2022. -->
+                <i style="color:red">In submission</i>
                 <p></p>
                 <p>
                     [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
