--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                             Lab</a> , where I am fortunate to be advised by Prof. <a
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
                         a research intern at UofA before, supervised by Prof. <a
-                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am a intern at
+                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
                         Apple Inc. now.
                         <br><br>
-                        Research Interest: Computer Vision (object detection, classification and anomaly
+                        Research Interest: Computer Vision, Medical Imaging (object detection, classification and anomaly
                         detection)<br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
                         [at] gmail [dot] com
