--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
                         Apple Inc. now.
                         <br><br>
-                        Research Interest: Computer Vision, Medical Imaging (object detection, classification and anomaly
+                        Research Interest: Computer Vision (object detection, classification and anomaly
                         detection)<br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
                         [at] gmail [dot] com
@@ -363,8 +363,9 @@
         <tr>&nbsp</tr>
     </table>
     <h2>Miscellaneous</h2>
+    <h4>Videos:</h4>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/JYPw38QwzDM"></iframe>   
     <p>
-
     <details style="line-height: 0.4;">
         <summary>Friends (click to expand)</summary>
         <ul>
