--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <ul>
         <div style="height:98px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2022/10/25] I will go to <a href=https://www.apple.com>Apple Inc.</a> as a intern in EE/SW team.
+                <p>[2022/10/25] I will go to <a href=https://www.apple.com>Apple Inc.</a> as an intern in EE/SW team.
                 </p>
             </li>
             <li>
