--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
                 <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
                 </b> <br>
                 <br>
-                Yi Zhou, Lei Huang, Tao Zhou, <strong>Hanshi Sun</strong> and Ling Shao <br>
+                Yi Zhou, Lei Huang, Tao Zhou, <strong>Hanshi Sun</strong>
                 <em>Future Generation Computer Systems</em>, (<i><b>FGCS</b></i>), 2022.
                 <p></p>
                 <p>
                     [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
                         page</a>]
-                    <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
+                    [<a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="_blank">paper</a>]
                     <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
                 </p>
             </td>
